# continual-model

./: README.md  pyproject.toml
my_method/: my_method.py  my_method_config.py  my_method_pipeline.py
my_method/data/: my_method_datamanager.py
